@@ -35,12 +35,6 @@
     org/apache/lucene/index/TestIndexWriterOnJRECrash.class
   "/>
 
-  <!-- TODO: maybe let people get closedchannel if they cancel(true) -->
-  <property name="forbidden-base-excludes" value="
-    org/apache/lucene/store/SimpleFSDirectory.class
-    org/apache/lucene/store/SimpleFSDirectory$SimpleFSIndexInput.class
-  "/>
-
   <import file="../common-build.xml"/>
 
   <property name="moman.commit-hash" value="5c5c2a1e4dea" />
