@@ -18,31 +18,35 @@ package org.apache.lucene.store;
  */
 
 import java.io.EOFException;
+import java.io.File;
 import java.io.IOException;
-import java.nio.ByteBuffer;
-import java.nio.channels.SeekableByteChannel;
-import java.nio.file.Files;
+import java.io.RandomAccessFile;
 import java.nio.file.Path;
-import java.nio.file.StandardOpenOption;
 
 /** A straightforward implementation of {@link FSDirectory}
- *  using {@link Files#newByteChannel(Path, java.nio.file.OpenOption...)}.  
- *  However, this class has
+ *  using java.io.RandomAccessFile.  However, this class has
  *  poor concurrent performance (multiple threads will
  *  bottleneck) as it synchronizes when multiple threads
  *  read from the same file.  It's usually better to use
- *  {@link NIOFSDirectory} or {@link MMapDirectory} instead. */
-public class SimpleFSDirectory extends FSDirectory {
+ *  {@link NIOFSDirectory} or {@link MMapDirectory} instead. 
+ *  <p>
+ *  NOTE: Because this uses RandomAccessFile, it will generally
+ *  not work with non-default filesystem providers. It is only
+ *  provided for applications that relied on the fact that 
+ *  RandomAccessFile's IO was not interruptible.
+ */
+public class RAFDirectory extends FSDirectory {
     
-  /** Create a new SimpleFSDirectory for the named location.
+  /** Create a new RAFDirectory for the named location.
    *
    * @param path the path of the directory
    * @param lockFactory the lock factory to use, or null for the default
    * ({@link NativeFSLockFactory});
    * @throws IOException if there is a low-level I/O error
    */
-  public SimpleFSDirectory(Path path, LockFactory lockFactory) throws IOException {
+  public RAFDirectory(Path path, LockFactory lockFactory) throws IOException {
     super(path, lockFactory);
+    path.toFile(); // throw exception if we can't get a File
   }
   
   /** Create a new SimpleFSDirectory for the named location and {@link NativeFSLockFactory}.
@@ -50,30 +54,33 @@ public class SimpleFSDirectory extends FSDirectory {
    * @param path the path of the directory
    * @throws IOException if there is a low-level I/O error
    */
-  public SimpleFSDirectory(Path path) throws IOException {
+  public RAFDirectory(Path path) throws IOException {
     super(path, null);
+    path.toFile(); // throw exception if we can't get a File
   }
 
   /** Creates an IndexInput for the file with the given name. */
   @Override
   public IndexInput openInput(String name, IOContext context) throws IOException {
     ensureOpen();
-    Path path = directory.resolve(name);
-    SeekableByteChannel channel = Files.newByteChannel(path, StandardOpenOption.READ);
-    return new SimpleFSIndexInput("SimpleFSIndexInput(path=\"" + path + "\")", channel, context);
+    final File path = directory.resolve(name).toFile();
+    RandomAccessFile raf = new RandomAccessFile(path, "r");
+    return new RAFIndexInput("SimpleFSIndexInput(path=\"" + path.getPath() + "\")", raf, context);
   }
 
   /**
-   * Reads bytes with {@link SeekableByteChannel#read(ByteBuffer)}
+   * Reads bytes with {@link RandomAccessFile#seek(long)} followed by
+   * {@link RandomAccessFile#read(byte[], int, int)}.  
    */
-  static final class SimpleFSIndexInput extends BufferedIndexInput {
+  static final class RAFIndexInput extends BufferedIndexInput {
     /**
-     * The maximum chunk size for reads of 16384 bytes.
+     * The maximum chunk size is 8192 bytes, because {@link RandomAccessFile} mallocs
+     * a native buffer outside of stack if the read buffer size is larger.
      */
-    private static final int CHUNK_SIZE = 16384;
+    private static final int CHUNK_SIZE = 8192;
     
-    /** the channel we will read from */
-    protected final SeekableByteChannel channel;
+    /** the file channel we will read from */
+    protected final RandomAccessFile file;
     /** is this instance a clone and hence does not own the file to close it */
     boolean isClone = false;
     /** start offset: non-zero in the slice case */
@@ -81,18 +88,16 @@ public class SimpleFSDirectory extends FSDirectory {
     /** end offset (start+length) */
     protected final long end;
     
-    private ByteBuffer byteBuf; // wraps the buffer for NIO
-
-    public SimpleFSIndexInput(String resourceDesc, SeekableByteChannel channel, IOContext context) throws IOException {
+    public RAFIndexInput(String resourceDesc, RandomAccessFile file, IOContext context) throws IOException {
       super(resourceDesc, context);
-      this.channel = channel; 
+      this.file = file; 
       this.off = 0L;
-      this.end = channel.size();
+      this.end = file.length();
     }
     
-    public SimpleFSIndexInput(String resourceDesc, SeekableByteChannel channel, long off, long length, int bufferSize) {
+    public RAFIndexInput(String resourceDesc, RandomAccessFile file, long off, long length, int bufferSize) {
       super(resourceDesc, bufferSize);
-      this.channel = channel;
+      this.file = file;
       this.off = off;
       this.end = off + length;
       this.isClone = true;
@@ -101,13 +106,13 @@ public class SimpleFSDirectory extends FSDirectory {
     @Override
     public void close() throws IOException {
       if (!isClone) {
-        channel.close();
+        file.close();
       }
     }
     
     @Override
-    public SimpleFSIndexInput clone() {
-      SimpleFSIndexInput clone = (SimpleFSIndexInput)super.clone();
+    public RAFIndexInput clone() {
+      RAFIndexInput clone = (RAFIndexInput)super.clone();
       clone.isClone = true;
       return clone;
     }
@@ -117,65 +122,50 @@ public class SimpleFSDirectory extends FSDirectory {
       if (offset < 0 || length < 0 || offset + length > this.length()) {
         throw new IllegalArgumentException("slice() " + sliceDescription + " out of bounds: "  + this);
       }
-      return new SimpleFSIndexInput(sliceDescription, channel, off + offset, length, getBufferSize());
+      return new RAFIndexInput(sliceDescription, file, off + offset, length, getBufferSize());
     }
 
     @Override
     public final long length() {
       return end - off;
     }
-
+  
+    /** IndexInput methods */
     @Override
-    protected void newBuffer(byte[] newBuffer) {
-      super.newBuffer(newBuffer);
-      byteBuf = ByteBuffer.wrap(newBuffer);
-    }
+    protected void readInternal(byte[] b, int offset, int len)
+         throws IOException {
+      synchronized (file) {
+        long position = off + getFilePointer();
+        file.seek(position);
+        int total = 0;
 
-    @Override
-    protected void readInternal(byte[] b, int offset, int len) throws IOException {
-      final ByteBuffer bb;
-
-      // Determine the ByteBuffer we should use
-      if (b == buffer) {
-        // Use our own pre-wrapped byteBuf:
-        assert byteBuf != null;
-        bb = byteBuf;
-        byteBuf.clear().position(offset);
-      } else {
-        bb = ByteBuffer.wrap(b, offset, len);
-      }
-
-      synchronized(channel) {
-        long pos = getFilePointer() + off;
-        
-        if (pos + len > end) {
+        if (position + len > end) {
           throw new EOFException("read past EOF: " + this);
         }
-               
-        try {
-          channel.position(pos);
 
-          int readLength = len;
-          while (readLength > 0) {
-            final int toRead = Math.min(CHUNK_SIZE, readLength);
-            bb.limit(bb.position() + toRead);
-            assert bb.remaining() == toRead;
-            final int i = channel.read(bb);
+        try {
+          while (total < len) {
+            final int toRead = Math.min(CHUNK_SIZE, len - total);
+            final int i = file.read(b, offset + total, toRead);
             if (i < 0) { // be defensive here, even though we checked before hand, something could have changed
-              throw new EOFException("read past EOF: " + this + " off: " + offset + " len: " + len + " pos: " + pos + " chunkLen: " + toRead + " end: " + end);
+             throw new EOFException("read past EOF: " + this + " off: " + offset + " len: " + len + " total: " + total + " chunkLen: " + toRead + " end: " + end);
             }
-            assert i > 0 : "SeekableByteChannel.read with non zero-length bb.remaining() must always read at least one byte (Channel is in blocking mode, see spec of ReadableByteChannel)";
-            pos += i;
-            readLength -= i;
+            assert i > 0 : "RandomAccessFile.read with non zero-length toRead must always read at least one byte";
+            total += i;
           }
-          assert readLength == 0;
+          assert total == len;
         } catch (IOException ioe) {
           throw new IOException(ioe.getMessage() + ": " + this, ioe);
         }
       }
     }
-
+  
     @Override
-    protected void seekInternal(long pos) throws IOException {}
+    protected void seekInternal(long position) {
+    }
+    
+    boolean isFDValid() throws IOException {
+      return file.getFD().valid();
+    }
   }
 }
